# Course_Work_System_Programming

./: CMakeLists.txt  CMakePresets.json  README.md
src/cli/: CMakeLists.txt  CliApp.cpp  CliApp.h  CommandReader.cpp  CommandReader.h  README.md  main.cpp
src/core/: CMakeLists.txt  Field.h  Index.h  README.md  Record.h  Table.cpp  Table.h  TableSchema.h
src/engine/: CMakeLists.txt  ConditionEvaluator.cpp  ConditionEvaluator.h  DatabaseCatalog.cpp  DatabaseCatalog.h  Engine.cpp  Engine.h  EngineError.h  ExecutionResult.h  JsonFormatter.cpp  JsonFormatter.h  README.md
src/parser/: Ast.h  CMakeLists.txt  ParseError.h  Parser.cpp  Parser.h  README.md  Token.h  Tokenizer.cpp  Tokenizer.h
src/storage/: CMakeLists.txt  FileManager.cpp  FileManager.h  README.md
test_scripts/: README.md  test_script1.txt  test_script2_select_where_comparisons.txt  test_script3_between_like.txt  test_script4_multiline_commands.txt  test_script5_qualified_names.txt  test_script6_error_handling.txt  test_script7_current_limitations.txt
tests/: CMakeLists.txt  README.md  cli_app_tests.cpp  cli_reader_tests.cpp  core_tests.cpp  engine_catalog_tests.cpp  engine_condition_tests.cpp  engine_dispatch_tests.cpp  engine_insert_select_tests.cpp  engine_table_tests.cpp  parser_condition_tests.cpp  parser_ddl_tests.cpp  parser_dml_tests.cpp  parser_tokenizer_tests.cpp  storage_tests.cpp
tests/core_storage_tests/: CMakeLists.txt  README.md  core_storage_tests.cpp
